src/test/ui/parser/issue-70583-block-is-empty-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-70583-block-is-empty-1.rs:20:1
   |
LL |             ErrorHandled::Reported => {}
   |                                       -- this block is empty, you might have not meant to close it
...
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

